2003-07-29  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/op_header.h:
	* libpp/op_header.cpp: separate output of cpu_type, cpu_speed
	  and counter setup

	* libpp/partition_files.h:
	* libpp/partition_files.cpp: unmergeable_profile() split profile
	  by the unmergeable.

	* pp/opreport_options.h:
	* pp/opreport_options.cpp:
	* pp/opreport.cpp: initial multiple counter output, multiple counter
	  with -l is not yet available.

2003-07-29  John Levon  <levon@movementarian.org>

	* doc/opcontrol.1.in: update for --event

2003-07-29  John Levon  <levon@movementarian.org>

	* configure.in:
	* doc/srcdoc/Doxyfile.in:
	* oprof_report/: remove badly out of date oprof_report

2003-07-28  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.7cvs

2003-07-26  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.6

2003-07-26  John Levon  <levon@movementarian.org>

	* utils/opcontrol: fix call of op_help

2003-07-26  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp: replace folder icons with clearer
	red/green circles

2003-07-26  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp: actually select and show the default
	event

2003-07-26  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp: small string tweak, show "conflicts"
	message consistently

2003-07-26  John Levon  <levon@movementarian.org>

	* gui/oprof_start.cpp: don't use invalidated iterator

2003-07-26  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: fix for 2.91.66

	* libpp/profile.cpp: typo invoking an undefined behavior revealed
	  by gcc stl debug mode
	* libpp/profile.h: ensure we provide the right typedef to std::
	  for profile::const_iterator revealed by gcc stl debug mode at compile
	  time. The implementation is a bit tricky to work with old compiler
	* libpp/symbol_sort.cpp: compare must define a weak ordered relation
	  order, revealed by gcc stl debug mode.

2003-07-26  Philippe Elie  <phil.el@wanadoo.fr>
